--- a/src/main/resources/static/client/partials/recordList.html
+++ b/src/main/resources/static/client/partials/recordList.html
@@ -1,13 +1,14 @@
 <div ng-controler="JoggingController">
     <div class="container">
+        <ul class="nav navbar-nav navbar-right navbar-default">
+            <button class="btn btn-primary">Logout
+            </button>
+        </ul>
         <div class="page-header">
             <h1>Jogging listing</h1>
         </div>
         <div class="list-group" id="chat-group-list">
             <a href="#" ng-repeat="jogRecord in jogRecords" class="list-group-item">{{jogRecord}}</a>
-            <!--<a href="#" class="list-group-item" >Record1</a>-->
-            <!--<a href="#" class="list-group-item" >Record2</a>-->
-            <!--<a href="#" class="list-group-item" >Record3</a>-->
         </div>
         <button class="btn btn-primary" ng-click="refresh()"><span class="glyphicon glyphicon-refresh"></span>Refresh
         </button>
