Registration form implementation and client side validation.

--- a/src/main/resources/static/client/partials/login.html
+++ b/src/main/resources/static/client/partials/login.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controler="LoginController">
+<div class="container" ng-controler="RegistrationController">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
@@ -14,13 +14,11 @@
                             <div class="form-group">
                                 <input class="form-control" placeholder="Password" name="password" type="password" value="" ng-model="credentials.password">
                             </div>
-                            <div ng-messages="credentials.$error" ng-messages-include="my-custom-messages">
-                                <!-- this required message has overridden the template message -->
+                            <div ng-messages="credentials.$error">
                                 <div class="alert alert-danger" role="alert" ng-message="generalLogin">Login failed</div>
-
-                                <!-- this is a brand new message and will appear last in the prioritization -->
                                 <div class="alert alert-danger" role="alert" ng-message="invalidCredentials">Invalid email or password</div>
                             </div>
+                            <a ng-click="register()">Not a registered user? Register here</a>
                             <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login" ng-click="login()">
                         </fieldset>
                     </form>
