--- a/src/main/resources/static/client/partials/login.html
+++ b/src/main/resources/static/client/partials/login.html
@@ -19,6 +19,7 @@
                                 <div class="alert alert-danger" role="alert" ng-message="invalidCredentials">Invalid email or password</div>
                             </div>
                             <a ng-click="register()">Not a registered user? Register here</a>
+                            <div class="alert alert-success" role="alert" ng-if="registered">Registration successful</div>
                             <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login" ng-click="login()">
                         </fieldset>
                     </form>
