--- a/src/main/resources/static/client/partials/recordList.html
+++ b/src/main/resources/static/client/partials/recordList.html
@@ -1,7 +1,7 @@
 <div ng-controler="JoggingController">
     <div class="container">
         <ul class="nav navbar-nav navbar-right navbar-default">
-            <button class="btn btn-primary">Logout
+            <button class="btn btn-primary" ng-click="logout()">Logout
             </button>
         </ul>
         <div class="page-header">
