--- a/src/main/resources/static/client/partials/report.html
+++ b/src/main/resources/static/client/partials/report.html
@@ -10,7 +10,8 @@
                     <tr>
                         <th>Week</th>
                         <th>Average distance</th>
-                        <th>Duration</th>
+                        <th>Average duration</th>
+                        <th>Average speed</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -18,6 +19,7 @@
                         <td>{{weekData.weekOfYear}}</td>
                         <td>{{weekData.averageDistance}} meters</td>
                         <td>{{weekData.averageTime}} seconds</td>
+                        <td>{{weekData.averageSpeed}} km/h</td>
                     </tr>
                     </tbody>
                 </table>
