--- a/src/main/resources/static/client/partials/jogRecordTab.html
+++ b/src/main/resources/static/client/partials/jogRecordTab.html
@@ -11,14 +11,12 @@
                 <h3 class="panel-title">Jogs</h3>
             </div>
             <div class="panel-body">
-                <div class="col-md-1">
-                    <label class="control-label">From</label>
-                </div>
-                <div class="col-md-3">
-                    <p class="input-group">
+                <div class="dateDiv">
+                    <label class="control-label" id="lbl-from">From</label>
+                    <p class="input-group" aria-labelledby="lbl-from">
                         <input type="text" class="form-control"
                                datepicker-popup="yyyy/MM/dd"
-                               ng-model="startDate"
+                               ng-model="dateFilter.startDate"
                                is-open="isOpen('fromDatePicker')"
                                close-text="Close"/>
                                           <span class="input-group-btn">
@@ -28,14 +26,12 @@
                                           </span>
                     </p>
                 </div>
-                <div class="col-md-1">
-                    <label class="control-label">To</label>
-                </div>
-                <div class="col-md-3">
-                    <p class="input-group">
+                <div class="dateDiv">
+                    <label class="control-label" id="lbl-to">To</label>
+                    <p class="input-group" aria-labelledby="lbl-to">
                         <input type="text" class="form-control"
                                datepicker-popup="yyyy/MM/dd"
-                               ng-model="endDate"
+                               ng-model="dateFilter.endDate"
                                is-open="isOpen('toDatePicker')"
                                close-text="Close"/>
                                           <span class="input-group-btn">
@@ -45,11 +41,11 @@
                                           </span>
                     </p>
                 </div>
-                <div class="col-md-3">
+                <div>
                 </div>
-                <div class="col-md-1">
+                <div>
                     <button class="btn btn-primary" ng-click="refreshRecords()"><span
-                            class="glyphicon glyphicon-refresh"></span></button>
+                            class="glyphicon glyphicon-refresh"></span>Refresh</button>
                 </div>
             </div>
             <table class="table table-hover">
