--- a/src/main/resources/static/client/partials/login.html
+++ b/src/main/resources/static/client/partials/login.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controler="RegistrationController">
+<div class="container" ng-controler="LoginController">
     <div class="row">
         <div class="col-md-4 col-md-offset-4">
             <div class="panel panel-default">
@@ -20,6 +20,7 @@
                             </div>
                             <a ng-click="register()">Not a registered user? Register here</a>
                             <div class="alert alert-success" role="alert" ng-if="registered">Registration successful</div>
+                            <div class="alert alert-danger" role="alert" ng-if="sessionExpired">Your session has expired</div>
                             <input class="btn btn-lg btn-primary btn-block" type="submit" value="Login" ng-click="login()">
                         </fieldset>
                     </form>
