hide average duration from report

--- a/src/main/resources/static/client/partials/reportTab.html
+++ b/src/main/resources/static/client/partials/reportTab.html
@@ -8,7 +8,7 @@
             <tr>
                 <th>Week</th>
                 <th>Average distance</th>
-                <th>Average duration</th>
+                <!--<th>Average duration</th>-->
                 <th>Average speed</th>
             </tr>
             </thead>
@@ -16,7 +16,7 @@
             <tr ng-repeat="weekData in reportData">
                 <td>{{weekData.weekOfYear}}</td>
                 <td>{{weekData.averageDistance}} meters</td>
-                <td>{{weekData.averageTime}} seconds</td>
+                <!--<td>{{weekData.averageTime}} seconds</td>-->
                 <td>{{weekData.averageSpeed}} km/h</td>
             </tr>
             </tbody>
